# adventofcode-helper-rs

./: Cargo.toml  README.md  template.rs
src/: internal.rs  lib.rs  main_macro.rs  prelude.rs
src/helpers/: array.rs  bfs.rs  eat.rs  grid.rs  grid3d.rs  iter.rs  mod.rs  ocr.rs  par.rs  slice.rs
