[package]
name = "aoc_helper"
version = "0.1.0"
authors = ["Giacomo Stevanato <giaco.stevanato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.5", features = ["cookies"] }
directories = "3.0"
chrono = "0.4"
itertools = "0.9"
regex = "1.4"
parse-display = "0.4"
arrayvec = "0.5"
ord_by_key = "0.1"
clap = "2.33"
rayon = "1.5"
num = "0.3"
derive_more = "0.99"
